@@ -56,7 +56,8 @@ TESTS :=																\
   test/test-worst_direction_stdev.py \
   test/test-propagate-calibration-uncertainty.py \
   test/test-heap \
-  test/test-traverse-sensor-links.py
+  test/test-traverse-sensor-links.py \
+  test/test-sorted-eig.py
 
 # Check the non-canonical problem definitions
 TESTS += \
