@@ -53,6 +53,8 @@ faster uncertainty computation:
 2024-12-06 compose_r(), compose_rt(), compose_Rt() has new args:
 inverted0,inverted1
 
+2025-01-15 mrcal.sorted_eig() broadcasts properly
+
 * Migration notes 2.4 -> 3.0
 
 2024-12-06 compose_r(), compose_rt(), compose_Rt() have new args:
